--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html lang=“ja”>
 <head>
 <meta charset=“UTF-8”>
-<title>hello, boys</title>
+<title>hello, boys and girls</title>
 </head>
 <body>
 Hello,world!
